{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 46,
  "lineage": "6a065694-9297-b5ff-9ab7-c0bc1f705f7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0462dfe29ca3c8900",
            "arn": "arn:aws:ec2:eu-central-1:988182271356:elastic-ip/eipalloc-0462dfe29ca3c8900",
            "domain": "vpc",
            "id": "eipalloc-0462dfe29ca3c8900",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-181-215-30.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.181.215.30",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-eip-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-eip-dev",
              "Workspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f19fced22d60b88a",
            "arn": "arn:aws:ec2:eu-central-1:988182271356:elastic-ip/eipalloc-0f19fced22d60b88a",
            "domain": "vpc",
            "id": "eipalloc-0f19fced22d60b88a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-181-155-93.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.181.155.93",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-eip-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-eip-dev",
              "Workspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:internet-gateway/igw-014308519f15cdb6a",
            "id": "igw-014308519f15cdb6a",
            "owner_id": "988182271356",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Internet-GTW-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Internet-GTW-dev",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_for_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0462dfe29ca3c8900",
            "association_id": "eipassoc-025c63243a0fc2f62",
            "connectivity_type": "public",
            "id": "nat-0faade531c0f17776",
            "network_interface_id": "eni-092dcc47ed1ada68f",
            "private_ip": "10.0.1.94",
            "public_ip": "63.181.215.30",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06b5cb798ce39ca7c",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "NAT-gateway-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "NAT-gateway-dev",
              "Workspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f19fced22d60b88a",
            "association_id": "eipassoc-008ce88eddfcb4df3",
            "connectivity_type": "public",
            "id": "nat-045aafe545395a274",
            "network_interface_id": "eni-069749811e269e3b5",
            "private_ip": "10.0.2.248",
            "public_ip": "63.181.155.93",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a66900a02971135e",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "NAT-gateway-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "NAT-gateway-dev",
              "Workspace": "default"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:route-table/rtb-0d80ab44ca1bc19e9",
            "id": "rtb-0d80ab44ca1bc19e9",
            "owner_id": "988182271356",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0faade531c0f17776",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "rtb-0d80ab44ca1bc19e9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.nat_gw_for_private_subnet",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:route-table/rtb-0e3e8a9e298a3b6d1",
            "id": "rtb-0e3e8a9e298a3b6d1",
            "owner_id": "988182271356",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-045aafe545395a274",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "rtb-0e3e8a9e298a3b6d1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.nat_gw_for_private_subnet",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:route-table/rtb-0893a351f6fbfdb45",
            "id": "rtb-0893a351f6fbfdb45",
            "owner_id": "988182271356",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014308519f15cdb6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Route-table-dev",
              "Workspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "rtb-0893a351f6fbfdb45",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_bind",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b357abb342c025a9",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d80ab44ca1bc19e9",
            "subnet_id": "subnet-0d2eba7dae8d75d07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.nat_gw_for_private_subnet",
            "aws_route_table.private_subnet_internet_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043dc4fa23fbf03eb",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e3e8a9e298a3b6d1",
            "subnet_id": "subnet-05086fd49a1677ca5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_nat",
            "aws_nat_gateway.nat_gw_for_private_subnet",
            "aws_route_table.private_subnet_internet_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_bind",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099043dcd5109ea3c",
            "region": "eu-central-1",
            "route_table_id": "rtb-0893a351f6fbfdb45",
            "subnet_id": "subnet-06b5cb798ce39ca7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_route_table.public_subnet_internet_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ec9fd5ed9c520c",
            "region": "eu-central-1",
            "route_table_id": "rtb-0893a351f6fbfdb45",
            "subnet_id": "subnet-0a66900a02971135e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_route_table.public_subnet_internet_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e14b4b4c822cd45",
            "region": "eu-central-1",
            "route_table_id": "rtb-0893a351f6fbfdb45",
            "subnet_id": "subnet-08c5cbcc14da66ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_route_table.public_subnet_internet_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f78423ac69a5761",
            "region": "eu-central-1",
            "route_table_id": "rtb-0893a351f6fbfdb45",
            "subnet_id": "subnet-025318570de7afcac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_route_table.public_subnet_internet_route",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-0dde98d2d77bec852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dde98d2d77bec852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-0dde98d2d77bec852",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-07b32d70cd0b0635f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b32d70cd0b0635f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-07b32d70cd0b0635f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-0a6b9d33e65859fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b9d33e65859fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1c",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "DB-subnet-dev-eu-central-1c",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-0a6b9d33e65859fa4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-0d2eba7dae8d75d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2eba7dae8d75d07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Private-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Private-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-0d2eba7dae8d75d07",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-05086fd49a1677ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05086fd49a1677ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Private-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Private-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-05086fd49a1677ca5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-06b5cb798ce39ca7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b5cb798ce39ca7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-06b5cb798ce39ca7c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-0a66900a02971135e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a66900a02971135e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1b",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-0a66900a02971135e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-08c5cbcc14da66ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c5cbcc14da66ef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1c",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1c",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-08c5cbcc14da66ef0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:subnet/subnet-025318570de7afcac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025318570de7afcac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988182271356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "Public-subnet-dev-eu-central-1a",
              "Workspace": "default"
            },
            "vpc_id": "vpc-0f0fda61341371e7f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "subnet-025318570de7afcac",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988182271356:vpc/vpc-0f0fda61341371e7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af7f6f6b821732d6",
            "default_route_table_id": "rtb-0d10ded35ab370b7a",
            "default_security_group_id": "sg-0f1d08aac795223e2",
            "dhcp_options_id": "dopt-0a50ed0f69cc17762",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0fda61341371e7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d10ded35ab370b7a",
            "owner_id": "988182271356",
            "region": "eu-central-1",
            "tags": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "VPC-dev",
              "Workspace": "default"
            },
            "tags_all": {
              "Design": "tarlekon",
              "Environment": "dev",
              "Manufactor": "terraform",
              "Name": "VPC-dev",
              "Workspace": "default"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988182271356",
            "id": "vpc-0f0fda61341371e7f",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}